# Shellfast

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  pyproject.toml
shellfast/: __init__.py
src/cpp/: module.cpp
src/cpp/filesystem/: filesystem.cpp  filesystem.h
src/cpp/network/: network.cpp  network.h
src/cpp/process/: process.cpp  process.h
src/cpp/system/: system.cpp  system.h
src/cpp/text/: text.cpp  text.h
src/shellfast/: _core.pyi
tests/: test_filesystem.py  test_system.py  test_text.py
